the tables have been top ten instead of top five for a while

--- a/CoursesWebsite/index.html
+++ b/CoursesWebsite/index.html
@@ -32,8 +32,8 @@
         </div>
 
         <div id="table-wrapper">
-            <table id="job-stats-table"><caption align="center">Top Five Jobs</caption><tbody></tbody></table>
-            <table id="skill-stats-table"><caption align="center">Top Five Skills</caption><tbody></tbody></table>
+            <table id="job-stats-table"><caption align="center">Top Ten Jobs</caption><tbody></tbody></table>
+            <table id="skill-stats-table"><caption align="center">Top Ten Skills</caption><tbody></tbody></table>
         </div>
     </body>
 </html>
