required class is no longer needed

--- a/CoursesWebsite/index.html
+++ b/CoursesWebsite/index.html
@@ -25,8 +25,8 @@
                 <span class="required-field" id="occupation-required-text">Occupation is required</span>
                 <span class="required-field" id="skill-required-text">Skill is required</span>
                 <br/>
-                <input class="new-entry-input job-input required-field" placeholder="Occupation">
-                <input class="new-entry-input skill-input required-field" placeholder="Skill">
+                <input class="new-entry-input job-input" placeholder="Occupation">
+                <input class="new-entry-input skill-input" placeholder="Skill">
                 <br />
                 <input type="number" max="999999" min="0" class="new-entry-input salary-input" placeholder="Salary (yearly)">
                 <br />
