--- a/CoursesWebsite/index.html
+++ b/CoursesWebsite/index.html
@@ -6,6 +6,16 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <script src="scripts/home.js"></script>
         <script src="scripts/common.js"></script>
+        <script>
+            //Google Analytics
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-89581048-2', 'auto');
+            ga('send', 'pageview');
+        </script>
         <title>Job Explore</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
